--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 const response = await fetch("https://openrouter.ai/api/v1/chat/completions", {
                     method: "POST",
                     headers: {
-                        Authorization: "Bearer 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",
+                        "Authorization" : "Bearer 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",
                         "Content-Type": "application/json",
                     },
                     body: JSON.stringify({
